# cs197-project

./: CMakeLists.txt  Makefile  MakefileLite  MakefileType1  MakefileType2  README.md  adaptive_hash.cpp  adaptive_hash.hh  adaptive_hash.hpp  cmake tutorial.txt  cs197.ipynb  data.py  hash_functions.hh  hash_functions.hpp  hash_schemes.hh  kde.py  lookups!.ipynb  test_harness.cpp  todo.txt
IndexStructures/: AdaptiveTable.hpp  CMakeLists.txt  test.cpp  was_makefile
IndexStructures/include/Adapter/: Adapters.hpp
IndexStructures/include/Structures/Cuckoo/: ArrayHashTable.hpp~  CacheLineLinearHashTable.hpp  ChainedHashMap.hpp  CompactInlinedChainedHashMap.hpp  CuckooHashTable.hpp  InlineChainedHashMap.hpp  LinearHashTable.hpp  LinearTombstoneHashTable.hpp  LinearTombstoneHashTableSIMD.hpp  QuadraticHashTable.hpp
IndexStructures/include/Util/: Avalanche.hpp  Collisions.hpp  HashTestCommons.hpp  Maurer.hpp  MemoryMeasurement.hpp  Mobius.hpp  Types.hpp  Zipf.h  hashFunctions.hpp
IndexStructures/personal proj/: IndexStructure  Makefile  cmake_install.cmake  prev_Makefile  test  test.cpp
IndexStructures/personal proj/bs/: Adaptive.h  LP_bad.h  a.out
IndexStructures/random testing (trash)/: CMakeCache.txt  IndexStructure  Makefile  test  was_Makefile
IndexStructures/random testing (trash)/bs/: BaseTable.hpp  a.out  class_test.cpp  test.cpp
IndexStructures/src/: main.cpp
IndexStructures/src/Microbench/: BenchNodeJumps.cpp  BenchSIMDSearch.cpp  BenchmarkHashes.cpp
Utils/: ArrayHashTable.hpp  ChainedHashMap.hpp  ChainedHashTable.hpp  Defines.hpp  GenericHashTable.hpp  Hash_Functions.hpp  LinearHashTable.hpp  OpenTableConstants.hpp  QuadraticHashTable.hpp  RobinDistanceHashTable.hpp  Types.hpp  timer.hpp
